# computer

./: .gitignore  CMakeLists.txt  TODO.md  build-img  package-lock.json  package.json  pixi.toml
scripts/: build-img
src/: add8b.v  add8b_tb.v  d_latch.v  dff_pos.v  fulladd.v  halfadd.v  sr_latch.v
src/adder/: adder.v  adder_tb.v
src/functional/alu/: ALU.md  alu.v
src/primitive/and31/: and31.v
src/primitive/and8b/: and8b.v
src/primitive/not8b/: not8b.v
src/primitive/or81/: or81.v
src/primitive/or8b/: or8b.v
src/primitive/xor8b/: xor8b.v
src/structural/adder/: adder.v  adder_tb.v
src/structural/decoder/: decoder12.v  decoder12_tb.v  decoder24.v  decoder24_tb.v  decoder38.v  decoder38_tb.v
src/structural/fulladd/: fulladd_tb.v
src/structural/halfadd/: halfadd_tb.v
src/structural/mux/: mux.v  mux81.v
src/structural/shifter/: shifter.v  shifter_tb.v
